Added(dotnet/versions): support for tags and pull_request events

--- a/dotnet/versions/action.yaml
+++ b/dotnet/versions/action.yaml
@@ -4,7 +4,7 @@ inputs:
   type:
     description: Can be 'lib' or 'deploy'
     required: true
-  package-version:
+  package-version:  # id of input
     description: 'Package version'
     required: true
 outputs:
