--- a/dotnet/tag-check/action.yaml
+++ b/dotnet/tag-check/action.yaml
@@ -1,11 +1,11 @@
 name: "Git Tag Checker"
 description: "Checks if the tag id a valid tag according to the versioning and branching rules"
 inputs:
-  type:
-    description: Can be 'lib' or 'deploy'
-    required: true
   package-version:
     description: "Package version"
+    required: true
+  app-version:
+    description: "The final app version"
     required: true
 outputs:
   app-version:
