--- a/dotnet/versions/action.yaml
+++ b/dotnet/versions/action.yaml
@@ -2,14 +2,14 @@ name: "Version Branch Generator"
 description: "Generates the version based on the branch name"
 inputs:
   type:
-    description: Can be 'lib' or 'deploy'
+    description: Can be 'lib' or 'mw-app' or 'fe-app'
     required: true
   package-version:
     description: "Package version"
     required: true
 outputs:
   app-version:
-    description: "The app version generated"
+    description: "Generated app version"
 runs:
   using: "node20"
   main: "dist/index.js"
