--- a/dotnet/versions/package.json
+++ b/dotnet/versions/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build -- --watch",
     "build": "ncc build index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
