--- a/dotnet/versions/action.yaml
+++ b/dotnet/versions/action.yaml
@@ -1,5 +1,6 @@
-name: "Version Branch Generator"
+name: "Odin Version Builder"
 description: "Generates the version based on the branch name"
+
 inputs:
   type:
     description: Can be 'lib' or 'dotnet-app' or 'fe-app'
@@ -7,9 +8,17 @@ inputs:
   package-version:
     description: "Package version"
     required: true
+
 outputs:
-  app-version:
-    description: "Generated app version"
+  version:
+    description: "Build version generated e.g. '1.5.6-dev.123'."
+  major-version:
+    description: "Returns the major version e.g. '1'"
+  minor-version:
+    description: "Returns the minor version e.g. '5'"
+  patch-version:
+    description: "Returns the patch version e.g. '6'"
+
 runs:
   using: "node20"
   main: "dist/index.js"
