feat(version): add support for pr + add outputs

--- a/dotnet/versions/action.yaml
+++ b/dotnet/versions/action.yaml
@@ -1,5 +1,6 @@
-name: "Version Branch Generator"
+name: "Odin Version Builder"
 description: "Generates the version based on the branch name"
+
 inputs:
   type:
     description: Can be 'lib' or 'deploy'
@@ -7,9 +8,19 @@ inputs:
   package-version:
     description: "Package version"
     required: true
+
 outputs:
-  app-version:
-    description: "The app version generated"
+  version:
+    description: "Build version generated e.g. '1.5.6-dev.123'."
+  major-version:
+    description: "Returns the major version e.g. '1'"
+  minor-version:
+    description: "Returns the minor version e.g. '5'"
+  patch-version:
+    description: "Returns the patch version e.g. '6'"
+  branch-name:
+    description: "Returns the branch name e.g. 'feature/odin-1234' (for both PR and push events)"
+
 runs:
   using: "node20"
   main: "dist/index.js"
