--- a/docker-buildx/action.yaml
+++ b/docker-buildx/action.yaml
@@ -190,6 +190,7 @@ runs:
         
           PUSH_ARG="--push"
           if [[ "${{ inputs.dry-run }}" == "true" ]];
+          then
             PUSH_ARG=""
           fi
 
