feat(versions): add support for `fe-lib`

--- a/dotnet/versions/action.yaml
+++ b/dotnet/versions/action.yaml
@@ -3,7 +3,7 @@ description: "Generates the version based on the branch name"
 
 inputs:
   type:
-    description: Can be 'lib' or 'dotnet-app' or 'fe-app'
+    description: Can be 'lib' | 'dotnet-app' | 'fe-app' | 'fe-lib'
     required: true
   package-version:
     description: "Package version"
