--- a/lock-branch/action.yaml
+++ b/lock-branch/action.yaml
@@ -3,19 +3,19 @@ name: "Lock Branch"
 description: "Lock a branch by setting its protection rules after code review approval."
 
 inputs:
+  github_token:
+    description: "GitHub token for authentication"
+    required: true
   branch_name:
     description: "The name of the branch to lock"
     required: true
-    type: string
   require_code_owner_reviews:
     description: "Require Code Owner approval"
     required: false
-    type: boolean
     default: true
   required_approval_count:
     description: "The number of approvals required"
     required: false
-    type: number
     default: 1
 
 runs:
@@ -32,7 +32,7 @@ runs:
 
         gh api -X PUT "/repos/${{ github.repository }}/branches/${{ inputs.branch_name }}/protection" \
           -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ inputs.github_token }}" \
           -d "{
             \"required_pull_request_reviews\": {
               \"dismiss_stale_reviews\": true,
@@ -42,4 +42,4 @@ runs:
             \"enforce_admins\": true
           }"
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github_token }}
