fix(docker-buildx): loading of docker-compose file causes issues

--- a/docker-buildx/action.yaml
+++ b/docker-buildx/action.yaml
@@ -161,6 +161,12 @@ runs:
       shell: bash
       run: |
         echo "::notice:: Using $DOCKER_COMPOSE_FILE compose file"
+        
+        cat $DOCKER_COMPOSE_FILE
+        
+        echo "===="
+        echo "Extracting list of services to build."
+        
         SERVICES=$(cat $DOCKER_COMPOSE_FILE | yq eval '.services | keys' -P | sed 's/- //')
         echo "SERVICES=$SERVICES" >> $GITHUB_ENV
 
