--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -25,7 +25,7 @@ inputs:
 outputs:
   all:
     description: 'All output in JSON'
-    value: ${{ steps.build.outputs.bundle_output }}
+    value: ${{ steps.bundle_output.outputs.all }}
 
 runs:
   using: 'composite'
