--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -93,7 +93,7 @@ runs:
       shell: bash
       id: set_output
       run: |
-        if [[ $(git diff --name-only HEAD~1..HEAD) == *"package.json"* ]]; then
+        if [[ steps.skip-check.outputs.skip == 'false' ]]; then
           echo "version_bumped=true" >> $GITHUB_OUTPUT
         else
           echo "version_bumped=false" >> $GITHUB_OUTPUT
