--- a/auto-bump/action.yaml
+++ b/auto-bump/action.yaml
@@ -89,18 +89,8 @@ runs:
         git commit -m "chore(package): auto bump version to ${{ steps.bump.outputs.new_version }}"
         git push origin ${{ inputs.branch }}
 
-    - name: Set output if version was bumped
-      shell: bash
-      id: set_output
-      run: |
-        if [[ steps.skip-check.outputs.skip == 'false' ]]; then
-          echo "version_bumped=true" >> $GITHUB_OUTPUT
-        else
-          echo "version_bumped=false" >> $GITHUB_OUTPUT
-        fi
-
     - name: Bundle outputs into JSON
       shell: bash
       id: bundle_output
       run: |
-        echo "all={\"version_bumped\":\"${{ steps.set_output.outputs.version_bumped }}\",\"new_version\":\"${{ steps.bump.outputs.new_version }}\"}" >> $GITHUB_OUTPUT
+        echo "all={\"new_version\":\"${{ steps.bump.outputs.new_version }}\"}" >> $GITHUB_OUTPUT
